# L5FE

./: AUTHORS  CMakeLists.txt  Doxyfile  Make.rules  Makefile  README  TODO  configure  dot_to_png.sh
doc/: 42sh.man  Doxyfile
src/: CMakeLists.txt  get_options.c  get_options.h  main.c  struct.h  variable.c  variable.h
src/arith/: CMakeLists.txt  arith.h  eval.h  evalexpr.c  free_stack.c  inftopos.c  parse.c  pos_eval.c  queue.c  stack.c  std.h
src/ast/: CMakeLists.txt  ast.c  ast.h  print_ast.c  release_ast.c
src/ast_printer/: ast.c  ast.h
src/builtins/: .source.c.swp  CMakeLists.txt  alias_tools.c  aliases.c  aliases.h  builtins.h  cd.c  echo.c  exit.c  export.c  history.c  my_itoa.c  shopt.c  source.c  tools.c
src/exec/: CMakeLists.txt  exec.h  exec_andor.c  exec_builtin.c  exec_case.c  exec_command.c  exec_compound.c  exec_dogroup.c  exec_expand.c  exec_for.c  exec_fork.c  exec_funcdec.c  exec_if.c  exec_input.c  exec_list.c  exec_pipe.c  exec_pipeline.c  exec_redir.c  exec_redir_simple.c  exec_shellcommand.c  exec_simplecommand.c  exec_until.c  exec_while.c  function.c  function.h  variable.c  variable.h
src/expansion/: CMakeLists.txt  expansion.h  tild_expansion.c
src/fnmatch/: CMakeLists.txt  compare.c  destroy.c  fifo.h  fn_match.h  getdir.c  init_fifo.c  main.c  match.c  my_fnmatch.c  my_fnmatch.h  parse.c  parser.c  path_exp.c  push.c  queue.c
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  token.c  token.h
src/parser/: CMakeLists.txt  parser.c  parser.h  parser_andor.c  parser_command.c  parser_compoundlist.c  parser_function.c  parser_loops.c  parser_other.c  parser_rule.c  parser_rule_conditions.c  parser_shellcommand.c  utils_error.c  utils_error.h  utils_string.c  utils_string.h
src/readline/: CMakeLists.txt  arrowkey.c  ctrlkey.c  functionkey.c  functionkey.h  getps.c  getps.h  history.c  history.h  putchar.c  readline.c  readline.h  utils.c
src/struct/: CMakeLists.txt  struct.h
tests/: test.py  tests
tests/arith/: file_test1  tests
tests/builtin_echo/: echo_e1  echo_n1  echo_var1  echo_var2  echo_var3  tests
tests/builtin_exit/: exit2  exit4  tests
tests/builtins/: exit2  exit3  exit5  tests
tests/category1/: tests
tests/for_commands/: file_test1  file_test2  file_test3  file_test4  file_test5  file_test6  tests
tests/functions/: file_test1  file_test2  file_test3  file_test4  file_test5  file_test6  tests
tests/hard_exec/: file_test1  file_test2  test  tests
tests/if_commands/: file_test10  file_test11  file_test12  file_test2  file_test3  file_test4  file_test5  file_test6  file_test7  file_test8  file_test9  test1
tests/redirection_pipes/: file_test1  file_test2  file_test3  file_test4  file_test5  file_test6  file_test7  tests
tests/simple_exec/: file_test10  file_test2  file_test4  file_test5  file_test6  file_test7  file_test8  file_test9  tests
tests/while_until_commands/: file_test1  file_test2  file_test3  file_test4  file_test5  file_test6  tests
texts/: .text2.swp  text  text2
